--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-*{
+* {
   margin:0;
   padding:0
 }
@@ -78,11 +78,11 @@ a.btn{
   width:24px;
 }
 .github{
-  background-image:url(/assets/github-edc899c60c7b3afd0c458e648197f578.svg);
+  background-image:url(/assets/images/github-logo.png);
   background-position:center center;
 }
 .linkedin{
-  background-image:url(/assets/linkedin-be22eb82414f9f637debbe2d64c301cb.svg);
+  background-image:url(/assets/images/linkedin-logo.png);
   background-position:center center;
 }
 .tumblr{
@@ -106,7 +106,7 @@ a.btn{
   background-position:center center;
 }
 .facebook{
-  background-image:url(/assets/facebook-70848fad6bf158b9a52e47d9bc956b8a.svg);
+  background-image:url(/assets/images/social.png);
   background-position:center center;
 }
 .pinterest{
