added 3 social icons

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -15,7 +15,7 @@
         <div class="row">
           <div class="menu col-xs-8">
             <ul>
-              <li><a href="/">Welcome</a></li> <li><a href="portfolio">Portfolio</a></li>
+              <li><a href="/">Welcome2</a></li> <li><a href="portfolio">Portfolio</a></li>
               <li><a href="https://medium.com/about-codecademy">Blog</a></li>
               <li><a href="about">About</a></li> <li><a href="contact">Contact</a></li>
             </ul>
@@ -40,7 +40,9 @@
           <li><a class="github" href="#">github</a></li> 
           <li><a class="linkedin" href="#">linkedin</a></li> 
           <li><a class="twitter" href="#">twitter</a></li> 
-        </ul> <p>&copy; 2015 Rohrs Engineering</p> 
+        </ul>
+        <p>&copy; 2015 Rohrs Engineering</p>
+        <%= image_tag("social.png", :alt => "rss feed") %>
       </div> 
     </div> 
   </body> 
