added 3 social icons

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -39,7 +39,7 @@
         <ul class="social_media"> 
           <li><a class="github" href="#">github</a></li> 
           <li><a class="linkedin" href="#">linkedin</a></li> 
-          <li><a class="twitter" href="#">twitter</a></li> 
+          <li><a class="facebook" href="#">facebook</a></li> 
         </ul>
         <p>&copy; 2015 Rohrs Engineering</p>
         <%= image_tag("social.png", :alt => "rss feed") %>
