added 3 social icons

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -78,11 +78,11 @@ a.btn{
   width:24px;
 }
 .github{
-  background-image: image-url("images/github-logo.png");
+  background-image: image-url("github-logo.png");
   background-position:center center;
 }
 .linkedin{
-  background-image: image-url("images/linkedin-logo.png");
+  background-image: image-url("linkedin-logo.png");
   background-position:center center;
 }
 .tumblr{
@@ -106,7 +106,7 @@ a.btn{
   background-position:center center;
 }
 .facebook{
-  background-image: image-url("/images/social.png");
+  background-image: image-url("social.png");
   background-position:center center;
 }
 .pinterest{
