added 3 social icons

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -55,7 +55,7 @@ a.btn{
   text-align:right;
 }
 .footer{
-  background-color:#fff;
+  /*background-color:#fff;*/
   height:200px;
   text-align:right;
   width:100%;
