added 3 social icons

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -43,7 +43,14 @@
         </ul>
         <p>&copy; 2015 Rohrs Engineering</p>
         <%= image_tag("social.png", :alt => "rss feed") %>
-      </div> 
-    </div> 
+      </div>
+    </div>
+    <div class="test">
+      <div class="container">
+        <ul>
+         <li><a class="facebook" href="#">facebook</a></li> 
+        </ul>
+      </div>
+    </div>
   </body> 
   </html>
