added 3 social icons

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -79,6 +79,7 @@ a.btn{
 }
 .github{
   background-image: image-url("github-logo.png");
+  background-size: auto auto;
   background-position:center center;
 }
 .linkedin{
