added 3 social icons

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -84,6 +84,7 @@ a.btn{
 }
 .linkedin{
   background-image: image-url("linkedin-logo.png");
+  background-size: 24px 24px;
   background-position:center center;
 }
 .tumblr{
