--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -15,13 +15,15 @@
         <div class="row">
           <div class="menu col-xs-8">
             <ul>
-              <li><a href="/">Welcome2</a></li> <li><a href="portfolio">Portfolio</a></li>
-              <li><a href="https://medium.com/about-codecademy">Blog</a></li>
-              <li><a href="about">About</a></li> <li><a href="contact">Contact</a></li>
+              <li><a href="/">Welcome3</a></li>
+              <li><a href="portfolio">Portfolio</a></li>
+              <li><a href="blog">Blog</a></li>
+              <li><a href="about">About</a></li>
+              <li><a href="contact">Contact</a></li>
             </ul>
           </div>
           <div class="name col-xs-4">
-            <h1>Matt Healy</h1>
+            <a class="Logo" href="/">Rohrs Engineering</a>
           </div>
         </div>
       </div>
@@ -42,14 +44,9 @@
           <li><a class="facebook" href="#">facebook</a></li> 
         </ul>
         <p>&copy; 2015 Rohrs Engineering</p>
-        <%= image_tag("social.png", :alt => "rss feed") %>
-      </div>
-    </div>
-    <div class="test">
-      <div class="container">
-        <ul>
-         <li><a class="facebook" href="#">facebook</a></li> 
-        </ul>
+        <!--Use this to insert image in html
+				<%= image_tag("social.png", :alt => "rss feed") %>
+				-->
       </div>
     </div>
   </body> 
