Background and logo

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -57,7 +57,7 @@ a.btn{
 .name{
   background-image: image-url("RohrsEngineering.jpg");
   background-position:center center;
-  background-size:auto auto;
+  background-size:100px auto;
 }
 .footer{
   background-color:#fff;
