--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -10,6 +10,7 @@
     <meta content="iW+WerP+62pK97xpbj1F8xkYUN1HqHLsfd9+Rw62+YU=" name="csrf-token" />
   </head>
   <body>
+    <!--
     <div class="header">
       <nav class="navbar navbar-inverse navbar-static-top">
     		<div class="container">
@@ -41,11 +42,12 @@
           		</li>
         		</ul>
       		</div>
-      <!--/.nav-collapse -->
+      <!--/.nav-collapse 
     		</div>
-    <!--/.container-fluid -->
+    <!--/.container-fluid 
   		</nav>
 		</div>
+-->
     <div class="main home">
       <div class="jumbotron"> 
         <div class="container"> 
