--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -18,7 +18,7 @@ body,html {
 .main{
   width:100%;
 }
-.header .navbar-brand {
+/*.header .navbar-brand {
   height: 80px;
 }
 
@@ -30,11 +30,13 @@ body,html {
   padding: 10px;
   margin: 25px 15px 25px 0;
 }
+
 .logo{
   background-image: image-url("RohrsEngineering.jpg");
   background-position:center center;
   background-size:100px auto;
 }
+*/
 a.btn{
   background-color:rgba(0,0,0,0.9);
   border-radius:0;
