--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -44,7 +44,7 @@
       		</div>
       <!--/.nav-collapse 
     		</div>
-    <!--/.container-fluid 
+    <!--/.container-fluid Z
   		</nav>
 		</div>
 -->
