--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -27,6 +27,17 @@ body,html {
   padding: 10px;
   margin: 25px 15px 25px 0;
 }
+.navbar-header a {
+  display:inline-block;
+  margin:0 0 0 10px;
+  text-align:left;
+  text-indent:-9999px;
+  display:block;
+  height:70px;
+  width:400px;
+  background-size: 400px 70px;
+}
+
 .main{
   width:100%;
 }
@@ -34,7 +45,7 @@ body,html {
 .logo{
   background-image: image-url("RohrsEngineering.jpg");
   background-position:center center;
-  background-size:100px auto;
+  background-size:400px 70px;
 }
 
 a.btn{
