--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -40,17 +40,15 @@ body,html {
 }
 */
 .logo{
-  display:inline-block;
   margin:0 0 0 10px;
   text-align:left;
   text-indent:-9999px;
   display:block;
   height:70px;
   width:400px;
-  background-size: 400px 70px;
   background-image: image-url("RohrsEngineering.jpg");
   background-position:center center;
-  background-size:auto auto;
+  background-size:contain;
 }
 
 .main{
