--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -160,7 +160,7 @@ a.btn{
   text-align:right;
 }
 .home h2{
-  color:#fff;
+  color:#000;
 }
 a.btn:hover,.nav li a:hover,.nav-btn:hover{
   background-color:#cc6cff;
