--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -159,9 +159,16 @@ a.btn{
   line-height:56px;
   text-align:right;
 }
+
 .home h2{
-  color:#000;
+  color:#fff;
 }
+
+.slogan {
+  color: #000;
+  text-align:right;
+}
+
 a.btn:hover,.nav li a:hover,.nav-btn:hover{
   background-color:#cc6cff;
   color:#fff;
