--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -51,7 +51,7 @@
     <div class="main home">
       <div class="jumbotron"> 
         <div class="container"> 
-          <h2>Creative Engineering Solutions</h2> 
+          <h2 class ="slogan">Creative Engineering Solutions</h2> 
           <a class="btn right" href="portfolio">View Projects</a> 
         </div> 
       </div> 
