--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,128 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,500,700' rel='stylesheet' type='text/css'>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>Portfolio</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,300italic,500,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link data-turbolinks-track="true" href="/assets/application-f7aa79b389eed3447dbd88f8dcc0b59e.css" media="all" rel="stylesheet" />
+    <script data-turbolinks-track="true" src="/assets/application-4fba09a36c46587a0f07211966615115.js"></script>
+    <meta content="authenticity_token" name="csrf-param" />
+    <meta content="iW+WerP+62pK97xpbj1F8xkYUN1HqHLsfd9+Rw62+YU=" name="csrf-token" />
+  </head>
+  <body>
+    <div class="header">
+      <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to "#{image_tag("RohrsEngineering.jpg", :alt => "Rohrs Engineering", :class => "logo")}".html_safe, "/welcome" %>
+    </div>
 
-<%= yield %>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+      <!--<nav class="navbar navbar-default navbar-static-top">
+    		<div class="container">
+      		<div class="navbar-header">
+        		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar3">
+          		<span class="sr-only">Toggle navigation</span>
+          		<span class="icon-bar"></span>
+          		<span class="icon-bar"></span>
+          		<span class="icon-bar"></span>
+        		</button>
+            <a class="navbar-brand" href="#">
+            	<%= image_tag("RohrsEngineering.jpg", :alt => "Rohrs Engineering", :class => "logo")%>
+            </a>
+        		<!--<a class="logo" href="#" alt="Rohrs Engineering">Rohrs Eng</a>
+      		</div>
+      		<div id="navbar3" class="navbar-collapse collapse">
+        		<ul class="nav navbar-nav navbar-right">
+          		<li class="active"><a href="#">Home</a></li>
+          		<li><a href="#">About</a></li>
+          		<li><a href="#">Contact</a></li>
+          		<li class="dropdown">
+            		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            		<ul class="dropdown-menu" role="menu">
+              		<li><a href="#">Action</a></li>
+              		<li><a href="#">Another action</a></li>
+              		<li><a href="#">Something else here</a></li>
+              		<li class="divider"></li>
+              		<li class="dropdown-header">Nav header</li>
+              		<li><a href="#">Separated link</a></li>
+              		<li><a href="#">One more separated link</a></li>
+            		</ul>
+          		</li>
+        		</ul>
+      		</div>
+      		<!--/.nav-collapse -
+    		</div>
+    		<!--/.container-fluid -
+  		</nav>
+			-->
+    </div>
+		
+    <%= yield %>
 
-</body>
+    <div class="footer"> 
+      <div class="container"> 
+        <ul class="social_media"> 
+          <li><a class="github" href="#">github</a></li> 
+          <li><a class="linkedin" href="#">linkedin</a></li> 
+          <li><a class="facebook" href="#">facebook</a></li> 
+        </ul>
+        <p>&copy; 2015 Rohrs Engineering</p>
+        <!--Use this to insert image in html
+				<%= image_tag("social.png", :alt => "rss feed") %>
+				-->
+      </div>
+    </div>
+    	
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+      <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+		<script src="/path/to/unslider.js"></script>
+  </body> 
 </html>
